fixed overflow

--- a/Website/Styles/Base_Style.css
+++ b/Website/Styles/Base_Style.css
@@ -89,6 +89,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .nav-content {
